# Sale_Smart_AI_BE

./: .env.example  .gitignore  Dockerfile  PROJECT_ARCHITECTURE.md  README.md  alembic.ini  app.py  app_environment.py  config.yml  docker-compose.yml  env.py  name  pyproject.toml
controllers/: activity_log.py  ai_model.py  assistant.py  auth.py  dashboard.py  permission.py  product.py  product_ai.py  product_auto_discovery.py  product_crawler.py  product_market.py  product_review.py  project.py  review_analysis.py  role.py  routers.py  trust_score.py  user.py  user_ai_model.py
core/: cache.py  db.py  logger.py  security.py  settings.py
demo/: demo_crawler._shopee.py  gemini_product_finder.py
middlewares/: permissions.py
migration/: env.py
models/: __init__.py  activity_log.py  ai_model.py  attachment.py  base.py  comment.py  crawl_session.py  product.py  product_chat.py  product_market.py  product_source.py  project.py  role.py  task.py  user.py  user_ai_model.py
prompts/: product_ai.py
repositories/: activity_log.py  ai_model.py  base.py  permission.py  product.py  product_analytics.py  product_chat.py  product_market.py  product_review.py  product_trust_score.py  project.py  project_user.py  review_analysis.py  role.py  user.py  user_ai_model.py
schemas/: activity_log.py  ai_model.py  attachment.py  auth.py  auto_discovery.py  clerk.py  comment.py  dashboard.py  product.py  product_ai.py  product_analytics.py  product_chat.py  product_crawler.py  product_filter.py  product_market.py  product_review.py  project.py  project_user.py  review_analysis.py  (+4 more)
(+99 files in other folders)
